docker, inject dependences
